templates/dash/dash-network.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network
  namespace: dash
  labels:
    name: network
    dashService: "true"
    serviceType: internal
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      name: network
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-sdk: "true"
      labels:
        name: network
        dashService: "true"
        serviceType: internal
    spec:
      affinity:
        nodeAffinity:
          # KISS normal control plane nodes should be preferred
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/kiss-ephemeral-control-plane
                    operator: DoesNotExist
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/kiss
                    operator: In
                    values:
                      - ControlPlane
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: dash-system
      containers:
        - name: network
          image: quay.io/ulagbulag/openark:latest-full
          imagePullPolicy: Always
          command:
            - dash-network
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "4"
              memory: 4Gi
          volumeMounts:
            - name: nats-token
              mountPath: /var/run/secrets/nats.io
              readOnly: true
      volumes:
        - name: nats-token
          secret:
            secretName: nats-dash-network-nats-bound-token
            optional: false
            items:
              - key: token
                path: token
---
apiVersion: v1
kind: Service
metadata:
  name: network
  namespace: dash
spec:
  selector:
    name: network
  ports:
    - appProtocol: grpc
      name: otlp-grpc
      port: 4317
      protocol: TCP
      targetPort: 4317
    - appProtocol: http
      name: otlp-http
      port: 4318
      protocol: TCP
      targetPort: 4318
---
apiVersion: v1
kind: Service
metadata:
  name: network-headless
  namespace: dash
spec:
  clusterIP: None
  selector:
    name: network
  ports:
    - appProtocol: grpc
      name: otlp-grpc
      port: 4317
      protocol: TCP
      targetPort: 4317
    - appProtocol: http
      name: otlp-http
      port: 4318
      protocol: TCP
      targetPort: 4318
